[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sessions"
version = "0.1.0"
description = "Monitor running Claude Code sessions in your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "kyupid"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["claude", "claude-code", "monitor", "terminal", "tui"]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/kyupid/claude-sessions"
Repository = "https://github.com/kyupid/claude-sessions"
Issues = "https://github.com/kyupid/claude-sessions/issues"

[project.scripts]
claude-sessions = "claude_sessions:main"

[tool.setuptools]
py-modules = ["claude_sessions"]
